# fork_python_example

./: .gitignore  .pre-commit-config.yaml  README.md  fork_python_example.code-workspace  pyproject.toml  run_build_and_test.sh  setup.py
.github/workflows/: pc_decoder_pip.yml  pc_decoder_wheels.yml  pip.yml  wheels.yml
pc/: read_serial.py  read_serial2.py
pc/decoder/: README.md  pyproject.toml  setup.py
pc/decoder/examples/: read_serial2.py
pc/decoder/src/: decoder.cpp
pc/decoder/tests/: test.py
src/: decoder.cpp  dynamic_buffer.cpp  dynamic_buffer.h  dynamic_buffer_main.cpp  test.cpp
tests/: test.py
