[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"

# Only build on CPython CPython 3.9 and 3.13
build = "cp39-* cp313-*"
# Disable building PyPy wheels on all platforms
skip = "pp*"
# Skip building on CPython 3.6 on all platforms
skip = "cp36-*"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
