[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"
test-requires = "numpy>=2.0.0"

# See: https://cibuildwheel.pypa.io/en/stable/options/
build = [
  # Only build on CPython CPython 3.9 and 3.13
  "cp39-*", "cp313-*",
]
skip = [
  # Skip CPython 3.6 and CPython 3.7
  "cp36-*", "cp37-*",
  # Skip 32-bit builds
  "*-win32", "*_i686",
  # Skip musllinux
  "*-musllinux",
  # Disable building PyPy wheels on all platforms
  "pp*",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
